# udacity-datastructures-algorithms

./: 1. solving_problems.md  2. efficiency.md  2b. logarithms.md  3a. data_structures_arrays.md  3b. stacks_and_queues.md  3c. recursion.md  3d. trees.md  3e. maps.md  4. basic_algorithms.md  5. sorting_algorithms.md  6. faster_divide_and_conquer_algos.md  7. greedy_algorithms.md  8. graph_algorithms.md  9. dynamic programming.md  LICENSE  data_structures.md  pyproject.toml  readme.md
2. python_refresher/: check_sudoku.py  days_between_dates.py  factorials.py  generator_example.py  match_flower_name.py  person_class.py  smallest_pos_int.py  track_courses.py
3. data_structures/: add_one_array.py  even_after_odd.py  flattening.py  linked_lists.py  max_sum_subarray.py  minimum_bracket_reversal.py  pascals_triangle.py  reverse_stack.py  skip-i_del-j.py  swap_nodes.py
4. recursion/: add_one_again.py  call_stack.py  deep_reverse.py  keyboard_combinations.py  last_index.py  list_permutations.py  permutations.py  return_codes.py  return_subsets.py  reverse_string.py  staircase.py  string_is_plaindrome.py  string_permutations.py  tower_of_hanoi.py
5. basic_algorithms/: binary_search.py  heap.py  self_balancing_tree.py  trie.py  trie_defaultdict.py
6. sorting_algorithms/: bubble_sort.py  case_sort.py  count_inversions.py  heap_sort.py  merge_sort.py  pair_sum.py  quick_sort.py  sort_012.py
7. divide_and_conquer_algorithms/: max_subarray.py  median.py
8. greedy_algorithms/: dijkstras_shortest_path.py  min_operations.py  min_platforms.py
9. graphs/: bfs.py  dfs.py  (+2 more)
(+85 files in other folders)
