[tool.poetry]
name = "udacity_datastrcutures_algorithms"
version = "0.1.0"
description = ""
authors = ["michael <michaelrogers.arsenal@gmail.com>"]

[tool.poetry.dependencies]
python = "^2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
